# lux-xiaokai

./: .gitignore  README.md  pyinstaller.spec  环境安装.txt
.github/workflows/: macos-build.yml
python-desktop-translator/: .env.example  README.md  pyproject.toml  requirements.txt
python-desktop-translator/src/: main.py  test.py
python-desktop-translator/src/config/: app_config.py
python-desktop-translator/src/core/: bootstrap.py  events.py  hotkeys.py
python-desktop-translator/src/models/: settings_model.py
python-desktop-translator/src/resources/locales/: en_US.json  zh_CN.json
python-desktop-translator/src/resources/qss/: style.qss
python-desktop-translator/src/services/: ai_client.py  polishing_service.py  qa_service.py  settings_service.py  speech_service.py  translation_service.py
python-desktop-translator/src/startup/: auto_start.py
python-desktop-translator/src/ui/: floating_window.py  theme_manager.py  tray.py
python-desktop-translator/src/ui/bubbles/: ai_qa.py  ai_translate.py  chat_history_area.py  internal_kb.py  message_widget.py  settings.py  speech_translate.py  text_polish.py
python-desktop-translator/src/utils/: audio.py  clipboard.py  logger.py  system.py  window.py
python-desktop-translator/tests/: test_history_area_width.py  test_message_widget.py  test_translation_service.py
python-desktop-translator/tools/: render_message_widget_test.py
tools/: build_mac.sh  setup_mac_env.sh
